initial update emailer

--- a/v1/index.html
+++ b/v1/index.html
@@ -439,7 +439,7 @@ New Work Order Request</h1>
 																					<table class="customer-detail" cellpadding="0" cellspacing="0" style="width: 100%; background-color: #eee; border-radius: 10px 10px 0 0;">
 																						<tbody><tr>
 																							<td width="100%" style="padding: 20px 30px 10px !important;">
-																								<h2 style="font-size: 22px; line-height: 1.15; color: #7f8e98; font-weight: bold; margin: 0;">Site Contact Details</h2>
+																								<h2 style="font-size: 22px; line-height: 1.15; color: #3a474f; font-weight: bold; margin: 0;">Site Contact Details</h2>
 																							</td>
 																					
 																						</tr>
@@ -485,7 +485,7 @@ New Work Order Request</h1>
 							<td class="sub-header">
 								<table cellpadding="0" cellspacing="0" width="100%" role="presentation" style="min-width: 100%; " class="stylingblock-content-wrapper">
 									<tr>
-										<td><h2 style="margin-bottom: 15px; margin-top: 0; font-size: 22px; font-weight: bold; line-height: 1.15; color: #7f8e98; padding:0 30px;">Details</h2></td>
+										<td><h2 style="margin-bottom: 15px; margin-top: 0; font-size: 22px; font-weight: bold; line-height: 1.15; color: #3a474f; padding:0 30px;">Details</h2></td>
 									</tr>
 								</table>
 							</td>
@@ -567,7 +567,7 @@ New Work Order Request</h1>
 								<table class="help-section stylingblock-content-wrapper" cellpadding="20" style="width: 100%; background-color: #eee; margin-top: 30px; margin-bottom: 35px; border-radius: 10px;">
 									<tr>
 										<td style="background-image: url('images/send.png') !important; background-repeat: no-repeat; background-position:right; background-size: 220px; background-origin: content-box;">
-											<h2 style="padding-top: 25px; margin-bottom: 0px; margin-top: 0; padding: 0px 10px 10px 10px; font-size: 22px; text-align: left; color: #7f8e98; line-height: 1.15;">Need Help?</h2>
+											<h2 style="padding-top: 25px; margin-bottom: 0px; margin-top: 0; padding: 0px 10px 10px 10px; font-size: 22px; text-align: left; color: #3a474f; line-height: 1.15;">Need Help?</h2>
 											<p style="font-family: Arial; color: #000; font-size: 13px; margin: 0; padding-bottom: 0px; text-align: left; padding-left: 10px; padding-right: 10px;">If you have any questions please contact <br> <strong><a style="color: #3a474f; text-decoration: none;" href="mailto:Hello@i4TGlobal.com">Hello@i4TGlobal.com</a></strong> </p>
 										</td>
 									</tr>
@@ -589,7 +589,7 @@ New Work Order Request</h1>
 							<tr>
 								<td class="ft-link" width="60%" style="padding-left: 0; padding-top: 25px;">
 									<h3 style="color: #004677; font-family: Arial; font-size: 16px; font-style: normal; font-weight: bold; line-height: 1.15;">
-							<a href="https://www.i4tglobal.com/solutions/" target="_blank" style="color:#3a474f;text-decoration:none;">i4tglobal.com/solutions</a></h3>
+							<a href="https://www.i4tglobal.com/solutions/" target="_blank" style="color:#3a474f;text-decoration:none;">https://www.i4TGlobal.com/Solutions</a></h3>
 								</td>
 								<td class="ft-logo" width="40%" style="padding-right: 0; padding-top: 25px; text-align: right;">
 									<a href="https://www.i4tglobal.com/" target="_blank"><img width="150" alt="" src="images/logo.jpg" style="width: 150px; height: auto;"></a>
