--- a/email-mid-table-v1/index.html
+++ b/email-mid-table-v1/index.html
@@ -534,7 +534,7 @@ New Work Order Request</h1>
 
 						<tr>
 							<td class="detail-table">
-								<table style="border:undefined;width:100%; padding: 0 30px 15px;" cellpadding="10" border="0" align="center">	
+								<table style="border:undefined;width:100%; padding: 0 0 15px;" cellpadding="10" border="0" align="center">	
 
 									<tbody>
 										<tr>
