--- a/emailer-sample/index.html
+++ b/emailer-sample/index.html
@@ -545,7 +545,7 @@ Invoice Submitted</h1>
 											<td width="100%" style="background-color: #eeeeee; border-radius: 10px; padding:5px;">
 											<table style="border:undefined;width:100%;" cellpadding="10" border="0" cellspacing="0">	
 												<th width="27%" style="text-align: left; vertical-align: middle; background-color: #94a4ae; border-radius: 5px;">
-													<font face="Arial" color="#ffffff"><span style="font-size: 12px;">Jobe Code</span></font>
+													<font face="Arial" color="#ffffff"><span style="font-size: 12px;">Job Code</span></font>
 												</th>
 												<td width="73%" style="text-align:left; vertical-align:middle; border-color:#ffffff; background-color:#eeeeee;">
 													<span style="font-family:Arial;"><span style="font-size:12px;"><span style="color:#000000;">WO45949</span></span></span>
@@ -675,7 +675,7 @@ Invoice Submitted</h1>
 											<td width="100%" style="background-color: #eeeeee; border-radius: 10px; padding:5px;">
 											<table style="border:undefined;width:100%;" cellpadding="10" border="0" cellspacing="0">	
 												<th width="27%" style="text-align: left; vertical-align: middle; background-color: #94a4ae; border-radius: 5px;">
-													<font face="Arial" color="#ffffff"><span style="font-size: 12px;">Invoice Du Date</span></font>
+													<font face="Arial" color="#ffffff"><span style="font-size: 12px;">Invoice Due Date</span></font>
 												</th>
 												<td width="73%" style="text-align:left; vertical-align:middle; border-color:#ffffff; background-color:#eeeeee;">
 													<span style="font-family:Arial;"><span style="font-size:12px;"><span style="color:#000000;">25/01/2022</span></span></span>
