Placeholder image updated

--- a/emailer-sample/index.html
+++ b/emailer-sample/index.html
@@ -501,7 +501,7 @@ Invoice Submitted</h1>
 																		<tbody><tr>
 																	
 																			<td class="cs-one" width="15%" style="padding-right: 5px; padding-left: 30px; padding-top: 25px;">
-																				<img width="65" height="65" class="profile" src="images/user.png" style="width: 65px; height: 65px; border-radius: 50%; border: solid 4px #fff; margin-top: 0;">
+																				<img width="65" height="65" class="profile" src="images/user-placeholder.jpg" style="width: 65px; height: 65px; border-radius: 50%; border: solid 4px #fff; margin-top: 0;">
 																			</td>
 																	
 																			<td class="cs-two" width="85%" align="left" valign="top" style="padding-left: 0; padding-top: 21px;">
