i4tradies ui fixed

--- a/i4tradies-app/index.html
+++ b/i4tradies-app/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Welcome To i4T Global</title>
+	<title>Welcome to i4Tradies</title>
 	<meta charset="UTF-8">
 	<!-- add meta content -->
 	<meta name="description" content="Free Web tutorials">
